--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-    
+  json_serializable: ^6.6.1  
   http: ^0.13.5
   provider: ^6.0.5
   fluttertoast: ^8.2.1
